# hue-sensor-temp

./: .gitignore  Cargo.toml  build.ps1  build.sh
.cargo/: config.toml
.github/workflows/: rust.yml
migrations/2024-02-05-102525_create_sensors/: down.sql  up.sql
migrations/2024-02-05-113200_create_temperatures/: down.sql  up.sql
src/: crud.rs  database.rs  main.rs  models.rs  poll.rs  schema.rs  sensor.rs  structs.rs
