cargo-features = ["profile-rustflags"]

[package]
name = "hue-sensor-temp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "full"] }
serde_json = "1.0.113"
chrono = { version = "0.4.33", features = ["serde"] }
diesel = { version = "2.1.4", features = ["sqlite", "chrono", "serde_json"] }
dotenv = "0.15.0"
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
dirs = "5.0.1"

[profile.release]
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[profile.release-speed]
inherits = "release"
opt-level = 3       # Optimize for speed.

[profile.release-min-size]
inherits = "release"
opt-level = "z"     # Optimize for size.
